# MLProject1

./: .gitignore  README.md  application.py  main.py  pyproject.toml  requirements.txt  setup.py
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlproject/: __init__.py
src/: exception.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
